--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,12 +50,12 @@ label {
   opacity: 1; */
   display: flex;
   align-items: center;
-  margin-left: 10px;
+  margin-left: 2.5px;
 }
 
 .logo img {
   width: 100%;
-  height: 100%;
+  height: 3em;
 }
 
 /* .searchbox {
@@ -69,7 +69,7 @@ label {
   background-color: #fff;
   display: flex;
   justify-content: space-between;
-  height: 60px;
+  height: 52px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -83,7 +83,7 @@ label {
   transition: all 0.2s;
   height: 2px;
   width: 100%;
-  background-color: greenyellow;
+  background-color: blueviolet;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -99,7 +99,7 @@ label {
   border-radius: 10px;
   display: flex;
   width: 20%;
-  height: 40px;
+  height: 2em;
   overflow: hidden;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
