--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,39 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Brutal Type";
+}
+
+:root {
+  --main-black: #121212;
+  --light-black: #202020;
+  --main-gray: #2b2b2b;
+  --gray-text: rgba(255, 255, 255, 0.72);
+  --main-blue: #0074e4;
+  --disabled-state-opacity: 0.5;
+  --seconday-text: rgba(245, 245, 245, 0.6);
+}
+
+body {
+  background-color: var(--main-black);
+  color: #fff;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+html {
+  scroll-behavior: smooth;
 }
