--- a/frontend/src/components/priceComponent/PriceComponent.module.css
+++ b/frontend/src/components/priceComponent/PriceComponent.module.css
@@ -6,7 +6,7 @@
     height: 28px;
   }
   
-  .prev_price {
+  .main_price {
     text-decoration: line-through;
     font-size: 14px;
     line-height: 20px;
@@ -14,7 +14,7 @@
   }
   
   .discounted_price {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 20px;
   }
   
