fix subNavBar and create some pages

--- a/frontend/src/components/subNavbar/sub-navbar.module.css
+++ b/frontend/src/components/subNavbar/sub-navbar.module.css
@@ -109,11 +109,18 @@
         color: var(--gray-text);
     }
 
+    .left_items a {
+        padding-left: 40px;
+        display: inline-block;
+    }
+
+    .cart,
     .wishlist {
         cursor: pointer;
         color: var(--gray-text);
     }
 
+    .cart:hover,
     .wishlist:hover {
         color: #fff;
     }
