--- a/frontend/src/components/homeComponents/FreeCardContainer/FreeCardContainer.module.css
+++ b/frontend/src/components/homeComponents/FreeCardContainer/FreeCardContainer.module.css
@@ -78,6 +78,10 @@
       align-items: center;
       gap: 10px;
     }
+
+    .icon_div p {
+      margin: 0 0;
+    }
   
     .btn {
       padding: 8px 16px;
