--- a/frontend/src/components/homeComponents/MainCardContainer/MainCardContainer.module.css
+++ b/frontend/src/components/homeComponents/MainCardContainer/MainCardContainer.module.css
@@ -18,9 +18,15 @@
   .container {
     overflow-x: none;
     display: flex;
-    gap: 10px;
+    gap: 1px;
     width: 100%;
     justify-content: space-between;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(calc(20% - 16px), 1fr));
+    grid-gap: 20px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch; */
   }
 
   .mainCardContainer {
@@ -30,5 +36,8 @@
   .card {
     width: calc(20% - 16px);
     margin-bottom: 28px;
+    /* scroll-snap-align: start;
+    width: 100%;
+    height: 100%; */
   }
 }
