--- a/frontend/src/pages/HomePage/homePage.module.css
+++ b/frontend/src/pages/HomePage/homePage.module.css
@@ -1,8 +1,13 @@
 .mainCardContainer,
 .secondaryCardContainer,
-.freeCardContainer,
-.miniCardContainer {
+.freeCardContainer {
   padding: 10px;
+}
+
+.miniCardContainer{
+  padding: 0px 15px;
+  width: calc(33.3333%);
+  list-style-type: none;
 }
 
 .freeCardContainer {
@@ -24,7 +29,8 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  gap: 40px;
+  flex-wrap: wrap;
+  /* gap: 40px; */
 }
 
 @media screen and (min-width: 768px) {
@@ -65,8 +71,14 @@
 
   .miniCardContainer {
     border-right: 1px solid #2a2a2a;
-    padding-right: 40px;
+    /* border: 1px solid #2a2a2a; */
+    padding-right: 20px;
   }
+
+  .miniCardContainer:last-child{
+    border-right: none;
+  }
+
   .arrowIcon_div {
     display: flex;
     gap: 10px;
@@ -93,9 +105,10 @@
   .minicard {
     display: flex;
     flex-direction: row;
-    margin: auto;
+    /* margin: auto;
     overflow-x: scroll;
-    justify-content: space-between;
+    justify-content: space-between; */
+    padding-left: 0px;
   }
 }
 
