--- a/frontend/src/pages/GamePage/GamePage.module.css
+++ b/frontend/src/pages/GamePage/GamePage.module.css
@@ -2,13 +2,70 @@
     margin: auto;
     max-width: 1600px;
     padding: 35px 132px;
+
+    .about_game{
+        width: 65%;
+        .infomation_game{
+            .infomation_game__container{
+                .title{
+                    font-size: 50px;
+                    line-height: 50px;
+                    letter-spacing: -1px;
+                }
+                
+                .about_game__container{
+                    padding-top: 25px;
+                    
+                    /* Set up content of about game*/
+                    .about_game__description{
+                        font-size: 20px;
+                        letter-spacing: 1px;
+                        color: #fff;
+                    }
+                }
+            }
+        }
+        
+        .type_game{
+            display: flex;
+            flex-direction: row;
+            width:100%;
+            align-items: stretch;
+            justify-content: space-between;
+            -webkit-box-align: stretch;
+            margin-top: 20px;
+    
+            .type_game__container{
+                position: relative;
+                padding-left: 30px;
+                flex: 1 1 calc(33.3333%);
+                display: flex;
+                flex-direction: column;
+                .type_game__title{
+                    color: #b9b9b9;
+                }
+    
+                .type_game__list_feature{
+                    text-decoration: underline;
+                    cursor: pointer;
+                }
+    
+                &:before{
+                    content: " ";
+                    height: 100%;
+                    border-left: solid 1px #fff;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                }
+            }
+        }
+    }
+    
+
 }
 
-.title{
-    font-size: 50px;
-    line-height: 50px;
-    letter-spacing: -1px;
-}
+
 
 @media (min-width = 1120px) {
     .container{
