--- a/frontend/src/components/swiperSliderComponent/productSlider.component.scss
+++ b/frontend/src/components/swiperSliderComponent/productSlider.component.scss
@@ -7,7 +7,8 @@
         height: 65vh;
         margin: 0;  
         border-radius: 10px;
-    
+        margin-bottom: 20px;
+
         .swiper-slide{
             overflow: hidden;
             position: relative;
