--- a/frontend/src/pages/GamePage/GamePage.module.css
+++ b/frontend/src/pages/GamePage/GamePage.module.css
@@ -53,7 +53,7 @@
                 &:before{
                     content: " ";
                     height: 100%;
-                    border-left: solid 1px #fff;
+                    border-left: solid 1px #474747;
                     position: absolute;
                     top: 0;
                     left: 0;
@@ -62,10 +62,18 @@
         }
     }
     
+    .showmore{
+        margin-top: 20px;
+    }
+
+    .showmore__content__text{
+        letter-spacing: 1px;
+        font-size: 16px;
+        color: #b9b9b9;
+        padding-bottom: 5px;
+    }
 
 }
-
-
 
 @media (min-width = 1120px) {
     .container{
