--- a/frontend/src/components/gameComponent/paymentComponent/paymentComponent.css
+++ b/frontend/src/components/gameComponent/paymentComponent/paymentComponent.css
@@ -88,6 +88,7 @@
     margin-top: 13px;
     height: 30px;
     border-bottom: .5px solid #545454;
+
 }
 
 .payment__item__wrapper{
@@ -96,7 +97,6 @@
     justify-content: space-between;
     height: 20px;
     line-height: 20px;
-
 }
 
 .payment__item__title{
@@ -108,6 +108,8 @@
     font-size: 18px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
 .payment__item__value__platform span{
