--- a/frontend/src/pages/CartPages/CartPage.module.css
+++ b/frontend/src/pages/CartPages/CartPage.module.css
@@ -4,12 +4,135 @@
     box-sizing: border-box;
 }
 
-.container{
+.cart_page__container{
     margin: auto;
     max-width: 1600px;
     padding: 35px 132px;
+    display: flex;
+    flex-direction: column;
 }
 
-.wrapper{
+.cart_page__sub_navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100px;
+    align-items: center;
+}
 
+.cart_page__title{
+    font-size: 50px;
+}
+
+.cart_page__points{
+    display: flex;
+    flex-direction: row;
+}
+
+.cart_page__user_wallet{
+    display: flex;
+    flex-direction: row;
+}
+
+.cart_page__wallet__title{
+    margin-right: 30px;
+    display: flex;
+}
+
+.cart_page__wallet__point{
+
+}
+
+.cart_page__wallet__title span, .cart_page__wallet__point span{
+    font-size: 20px;
+}
+
+.cart_page__wallet__point span{
+    font-weight: bold;
+    padding: 5px;
+    border: solid #fff 2px;
+    border-radius: 5px;
+}
+
+.cart_game__content{
+    display: flex;
+    flex-direction: row-reverse;
+    height: 100%;
+    width: 100%;
+    line-height: normal;
+}
+
+.cart_game__payment{
+    width: 400px;
+    padding-left: 30px;
+    flex-shrink: 0;
+}
+
+.cart_game__wrapper{
+    width: 100%;
+}
+
+.cart_game__payment__container{
+    width: 100%;
+    /* background-color: #797979; */
+}
+
+.cart_game__payment__wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.cart_game__payment__title{
+    display: flex;
+    flex-direction: flex-start;
+}
+
+.cart_game__payment__title span{
+    font-size: 40px;
+}
+
+.cart_game__payment__summary{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+.cart_game__payment__total, .cart_game__payment__price{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.cart_game__payment__part__title{
+    font-size: 18px;
+}
+
+.cart_game__payment__btns{
+    width: 100%;
+}
+
+.cart_game__payment__btn{
+    width: 100%;
+    display: flex;
+}
+
+.cart_game__payment__checkout{
+    width: 100%;
+    background: rgb(0, 116, 228);
+    color: #fff;
+    text-transform: uppercase;
+    width: 100%;
+    height: 50px;
+    border-radius: 7px;
+    border: none;
+}
+
+.cart_game__payment__total{
+    padding-top: 10px;
+    border-top: solid #fff 1px;
+    font-weight: 700;
+    font-size: 22px;
 }
