FE and BE for user

--- a/frontend/src/components/cartComponent/cartItem/cartItem.component.css
+++ b/frontend/src/components/cartComponent/cartItem/cartItem.component.css
@@ -5,6 +5,10 @@
     border-radius: 5px;
 }
 
+.is__bought{
+    border: solid red 3px;
+}
+
 .cart_game__item__wrapper{
     display: flex;
     flex-direction: row;
