--- a/frontend/src/pages/CheckoutPage/checkoutPage.module.css
+++ b/frontend/src/pages/CheckoutPage/checkoutPage.module.css
@@ -221,3 +221,12 @@
     }
 }
 
+
+button:disabled,
+button[disabled]{
+    background: #545454;
+
+    &:hover{
+        background: #545454
+    }
+}
