--- a/frontend/src/pages/LibrariesPage/librariesPage.module.css
+++ b/frontend/src/pages/LibrariesPage/librariesPage.module.css
@@ -42,6 +42,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 300px;
 }
 
 .libraries__item__img{
@@ -97,3 +98,13 @@
     }
 }
 
+.libraries__btn__info span{
+    height: 40px;
+    width: 100%;
+    line-height: 100%;
+}
+
+button:disabled,
+button[disabled]{
+    background: #5b5b5b
+}
